--- a/index.html
+++ b/index.html
@@ -6,185 +6,206 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.2/dist/ethers.umd.min.js"></script>
   <style>
-    :root {
-      --bg: #020617;
-      --card: #020617cc;
-      --card-border: #1f2937;
-      --accent1: #0ea5e9;
-      --accent2: #6366f1;
-      --accent3: #22c55e;
-      --text-main: #e5e7eb;
-      --text-muted: #9ca3af;
-    }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #0f172a 0, #020617 55%, #000 100%);
-      color: var(--text-main);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 16px;
-    }
-    .shell {
-      width: 100%;
-      max-width: 420px;
-    }
-    .title {
-      font-size: 28px;
-      font-weight: 700;
-      margin-bottom: 4px;
-      background: linear-gradient(135deg, var(--accent3), var(--accent1), var(--accent2));
-      -webkit-background-clip: text;
-      color: transparent;
-      text-align: center;
-    }
-    .subtitle {
-      text-align: center;
-      font-size: 13px;
-      color: var(--text-muted);
-      margin-bottom: 14px;
-    }
-    .card {
-      background: var(--card);
-      border-radius: 20px;
-      border: 1px solid var(--card-border);
-      padding: 18px 18px 20px;
-      box-shadow: 0 24px 50px rgba(15,23,42,0.9);
-      backdrop-filter: blur(18px);
-    }
-    .row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 12px;
-      flex-wrap: wrap;
-    }
-    .chip {
-      padding: 6px 10px;
-      border-radius: 999px;
-      background: #020617;
-      border: 1px solid #111827;
-      font-size: 11px;
-      color: var(--text-muted);
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-    }
-    .chip-dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 999px;
-      background: #22c55e;
-    }
-    button {
-      border: none;
-      border-radius: 999px;
-      padding: 8px 14px;
-      font-size: 13px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: transform 0.08s ease, box-shadow 0.08s ease, opacity 0.08s ease;
-      white-space: nowrap;
-    }
-    button:active {
-      transform: translateY(1px) scale(0.99);
-      box-shadow: none;
-    }
-    button[disabled] {
-      opacity: 0.6;
-      cursor: default;
-    }
-    #connectBtn {
-      background: #f9fafb;
-      color: #020617;
-      box-shadow: 0 10px 25px rgba(15,23,42,0.7);
-    }
-    #startBtn {
-      width: 100%;
-      margin-bottom: 10px;
-      background: linear-gradient(135deg, var(--accent3), var(--accent1), var(--accent2));
-      color: white;
-      box-shadow: 0 12px 30px rgba(56,189,248,0.6);
-    }
-    #addr {
-      font-size: 11px;
-      color: var(--text-muted);
-      max-width: 180px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 8px;
-      margin-bottom: 14px;
-      margin-top: 4px;
-    }
-    .tile {
-      height: 64px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 12px;
-      font-weight: 700;
-      font-size: 22px;
-      background: #020617;
-      color: #9ca3af;
-      transition: background 0.12s ease, color 0.12s ease, transform 0.08s ease;
-    }
-    .tile.pop {
-      transform: scale(1.05);
-    }
-    .controls {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 8px;
-      margin-bottom: 10px;
-      justify-items: center;
-    }
-    .dir {
-      width: 100%;
-      max-width: 90px;
-      background: #111827;
-      color: var(--text-main);
-      border: 1px solid #1f2937;
-    }
-    #scoreRow {
-      display: flex;
-      justify-content: space-between;
-      font-size: 13px;
-      color: var(--text-muted);
-      margin-bottom: 4px;
-    }
-    #scoreValue {
-      font-size: 16px;
-      font-weight: 600;
-      color: #e5e7eb;
-    }
-    #status {
-      font-size: 12px;
-      color: #f97316;
-      min-height: 16px;
-    }
-    #hint {
-      margin-top: 6px;
-      font-size: 11px;
-      color: var(--text-muted);
-      text-align: center;
-    }
-    .kbd {
-      padding: 2px 5px;
-      border-radius: 6px;
-      border: 1px solid #374151;
-      font-size: 10px;
-      background: #020617;
-      color: #d1d5db;
-    }
+  :root {
+    --bg: #020617;
+    --card: #020617cc;
+    --card-border: #1f2937;
+    --accent1: #0ea5e9;
+    --accent2: #6366f1;
+    --accent3: #22c55e;
+    --text-main: #e5e7eb;
+    --text-muted: #9ca3af;
+  }
+  * { box-sizing: border-box; }
+  
+  body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    background: radial-gradient(circle at top, #0f172a 0, #020617 55%, #000 100%);
+    color: var(--text-main);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 16px;
+  }
+  
+  .shell {
+    width: 100%;
+    max-width: 420px;
+  }
+  
+  .title {
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 4px;
+    background: linear-gradient(135deg, var(--accent3), var(--accent1), var(--accent2));
+    -webkit-background-clip: text;
+    color: transparent;
+    text-align: center;
+  }
+  
+  .subtitle {
+    text-align: center;
+    font-size: 13px;
+    color: var(--text-muted);
+    margin-bottom: 14px;
+  }
+  
+  .card {
+    background: var(--card);
+    border-radius: 20px;
+    border: 1px solid var(--card-border);
+    padding: 18px 18px 20px;
+    box-shadow: 0 24px 50px rgba(15,23,42,0.9);
+    backdrop-filter: blur(18px);
+  }
+  
+  .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 12px;
+    flex-wrap: wrap;
+  }
+  
+  .chip {
+    padding: 6px 10px;
+    border-radius: 999px;
+    background: #020617;
+    border: 1px solid #111827;
+    font-size: 11px;
+    color: var(--text-muted);
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
+  }
+  
+  .chip-dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 999px;
+    background: #22c55e;
+  }
+  
+  button {
+    border: none;
+    border-radius: 999px;
+    padding: 8px 14px;
+    font-size: 13px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: transform 0.08s ease, box-shadow 0.08s ease, opacity 0.08s ease;
+    white-space: nowrap;
+  }
+  
+  button:active {
+    transform: translateY(1px) scale(0.99);
+    box-shadow: none;
+  }
+  
+  button[disabled] {
+    opacity: 0.6;
+    cursor: default;
+  }
+  
+  #connectBtn {
+    background: #f9fafb;
+    color: #020617;
+    box-shadow: 0 10px 25px rgba(15,23,42,0.7);
+  }
+  
+  #startBtn {
+    width: 100%;
+    margin-bottom: 10px;
+    background: linear-gradient(135deg, var(--accent3), var(--accent1), var(--accent2));
+    color: white;
+    box-shadow: 0 12px 30px rgba(56,189,248,0.6);
+  }
+  
+  #addr {
+    font-size: 11px;
+    color: var(--text-muted);
+    max-width: 180px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 8px;
+    margin-bottom: 14px;
+    margin-top: 4px;
+  }
+  
+  /* UPDATED: **lighter empty tiles** */
+  .tile {
+    height: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    font-weight: 700;
+    font-size: 22px;
+  
+    /* EMPTY TILE STYLE (default when v === 0) */
+    background: #3b3f4a;    /* LIGHT GRAY */
+    color: #9ca3af;
+    /* ------------ */
+  
+    transition: background 0.12s ease, color 0.12s ease, transform 0.08s ease;
+  }
+  
+  .tile.pop {
+    transform: scale(1.05);
+  }
+  
+  .controls {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+    margin-bottom: 10px;
+    justify-items: center;
+  }
+  
+  .dir {
+    width: 100%;
+    max-width: 90px;
+    background: #111827;
+    color: var(--text-main);
+    border: 1px solid #1f2937;
+  }
+  
+  #scoreRow {
+    display: flex;
+    justify-content: space-between;
+    font-size: 13px;
+    color: var(--text-muted);
+    margin-bottom: 4px;
+  }
+  
+  #scoreValue {
+    font-size: 16px;
+    font-weight: 600;
+    color: #e5e7eb;
+  }
+  
+  #status {
+    font-size: 12px;
+    color: #f97316;
+    min-height: 16px;
+  }
+  
+  #hint {
+    margin-top: 6px;
+    font-size: 11px;
+    color: var(--text-muted);
+    text-align: center;
+  }
   </style>
+
 </head>
 <body>
   <div class="shell">
@@ -275,7 +296,7 @@ function tilePalette(value) {
 async function ensureBaseNetwork() {
   if (!window.ethereum) return;
   const chainId = await window.ethereum.request({ method: "eth_chainId" });
-  if (chainId === "0x2105") { // 8453
+  if (chainId === "0x2105") { // Base mainnet 8453
     networkLabel.textContent = "Network: Base Mainnet";
     networkLabel.style.color = "#bbf7d0";
   } else {
@@ -306,7 +327,13 @@ async function connect() {
 async function refresh(popNew = false) {
   if (!contract || !account) return;
   try {
-    const [tiles, score, active, gameOver] = await contract.getGame(account);
+    const game = await contract.getGame(account);
+    // ethers v6 returns an array-like object, we index into it explicitly
+    const tiles = game[0];
+    const score = game[1];
+    const active = game[2];
+    const gameOver = game[3];
+
     const cells = gridEl.children;
     for (let i = 0; i < 16; i++) {
       const v = Number(tiles[i]);
@@ -330,7 +357,7 @@ async function refresh(popNew = false) {
       statusEl.textContent = "";
     }
   } catch (e) {
-    console.error(e);
+    console.error("getGame error:", e);
     statusEl.textContent = "Unable to load game state.";
   }
 }
@@ -348,7 +375,7 @@ async function startGame() {
     statusEl.textContent = "";
     await refresh(true);
   } catch (e) {
-    console.error(e);
+    console.error("startGame error:", e);
     statusEl.textContent = "Start failed or rejected.";
   } finally {
     startBtn.disabled = false;
@@ -370,8 +397,7 @@ async function move(dir) {
     statusEl.textContent = "";
     await refresh(true);
   } catch (e) {
-    console.error(e);
-    // Most common revert: "No tiles moved"
+    console.error("move error:", e);
     statusEl.textContent = "Move reverted (no tiles moved or tx cancelled).";
   } finally {
     moveLock = false;
